--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 **/.ipynb_checkpoints/
 
 # Ignorar el archivo conexiones.properties en cualquier lugar del proyecto
-conexiones.properties
+Ejecutables/Local/*.properties
